Bug 320318 - Font used in interface doesn't support Cyrillic
Summary: Font used in interface doesn't support Cyrillic
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.3.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-26 16:37 UTC by EP
Modified: 2013-06-06 17:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen shot illustrating the problem (79.82 KB, image/png)
2013-05-26 16:44 UTC, EP
Details
second screenshot (45.03 KB, image/png)
2013-06-03 21:39 UTC, EP
Details

Note You need to log in before you can comment on or make changes to this bug.
Description EP 2013-05-26 16:37:35 UTC
Rekonq have hardcoded font in the New Tab page which doesn't support Cyrillic. This font should be configurable or, better, inherited from system fonts settings, because now it looks inconsistent.

Reproducible: Always
Comment 1 EP 2013-05-26 16:44:53 UTC
Created attachment 80094 [details]
screen shot illustrating the problem
Comment 2 Andrea Diamantini 2013-06-01 08:42:58 UTC
I'm studying this problem but I cannot achieve a real solution. I'm listing in the CSS font-family 2 fonts:

font-family: 'Nunito', sans-serif

Given that the first one does not have cyrillic types, it should fall back to the generic second one. Isn't it?
Comment 3 EP 2013-06-01 09:27:50 UTC
Yes, it falls back to sans-serif, but in mixed strings with cyrillic and latin words text looks inconsistent because of different font-families used to display it
Comment 4 Andrea Diamantini 2013-06-01 18:23:46 UTC
well.. no. In the screenshot you posted, Nunito font is yet used for page links (no falling back to cyrillic "sans-serif" font. missing translation?) while the default sans serif font is used for favorite title links.
Comment 5 EP 2013-06-03 21:39:14 UTC
Created attachment 80281 [details]
second screenshot

OK, may be my explanations not good enough, here another example of mixed font families from History tab. Do you still think that the text looks normal, falling back to sans on cyrillic words?
Comment 6 Andrea Diamantini 2013-06-04 06:15:50 UTC
ok, thanks for this second screenshot. Helped a lot to understand problem :)
I anyway cannot yet understand your preferred solution: do NOT falling back
to sans on cyrillic words or just use sans everywhere. In the second case,
I thought previous css solution worked. But it isn't the case, it seems...


2013/6/3 <bertyfogs@gmail.com>

> https://bugs.kde.org/show_bug.cgi?id=320318
>
> --- Comment #5 from bertyfogs@gmail.com ---
> Created attachment 80281 [details]
>   --> https://bugs.kde.org/attachment.cgi?id=80281&action=edit
> second screenshot
>
> OK, may be my explanations not good enough, here another example of mixed
> font
> families from History tab. Do you still think that the text looks normal,
> falling back to sans on cyrillic words?
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
>
Comment 7 EP 2013-06-04 18:51:28 UTC
I already described my suggestions in first comment, "This font should be configurable or inherited from system fonts settings". Using custom hardcoded font in UI isn't good idea
Comment 8 Andrea Diamantini 2013-06-06 17:36:09 UTC
Git commit 894b79f5ffd816962fe38207d40bf05274490498 by Andrea Diamantini.
Committed on 06/06/2013 at 19:34.
Pushed by adjam into branch 'master'.

Use webkit general font to render rekonq pages

M  +0    -7    src/data/CMakeLists.txt
D  +-    --    src/data/Nunito-Regular.ttf
M  +4    -9    src/data/home.html
M  +3    -8    src/data/rekonqinfo.html
M  +4    -2    src/rekonqpage/newtabpage.cpp
M  +2    -1    src/webtab/protocolhandler.cpp
M  +4    -2    src/webtab/webpage.cpp

http://commits.kde.org/rekonq/894b79f5ffd816962fe38207d40bf05274490498