Use webkit general font to render rekonq pages

BUG: 320318