src/webtab/protocolhandler.cpp
@@ -398,7 +398,8 @@ QString ProtocolHandler::dirHandling(const KFileItemList &list)
     html.replace(QL1S("$DEFAULT_PATH"), dataPath);
     html.replace(QL1S("$PAGE_TITLE"), title);
     html.replace(QL1S("$MAIN_CONTENT"), msg);
-
+    html.replace(QL1S("$GENERAL_FONT"), QWebSettings::globalSettings()->fontFamily(QWebSettings::StandardFont));
+    
     return html;
 }
 
